FIX: Extranuous SCGI and FastCGI directives

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,11 +13,9 @@ http {
 
     access_log off;
 
-    client_body_temp_path /var/run/openresty/nginx-client-body;
-    proxy_temp_path       /var/run/openresty/nginx-proxy;
-    fastcgi_temp_path     /var/run/openresty/nginx-fastcgi;
-    uwsgi_temp_path       /var/run/openresty/nginx-uwsgi;
-    scgi_temp_path        /var/run/openresty/nginx-scgi;
+    client_body_temp_path /dev/shm/nginx-client-body;
+    proxy_temp_path       /dev/shm/nginx-proxy;
+    uwsgi_temp_path       /dev/shm/nginx-uwsgi;
 
     sendfile    on;
     #tcp_nopush on;
